# Agents

./: .gitignore  README.md
BuildingModels/: main.py  pyproject.toml
BuildingModels/src/: performance_metrics.ipynb
BuildingModels/src/dimension/: reduction.ipynb
BuildingModels/src/eda/: iris.ipynb
BuildingModels/src/math/: linearAlgebra.ipynb  statsAndProb.ipynb
BuildingModels/src/models/: Notes.md
BuildingModels/src/models/classification/: knn.ipynb  naive_bayes.ipynb
BuildingModels/src/models/regression/: logistic_regression.ipynb
BuildingModels/src/text/: processing.ipynb
agent-learn/: main.py  pyproject.toml
agent-learn/data/: speech.txt
agent-learn/notes/: genAI.md  notes.md  pydantic.md
agent-learn/pydantic/: first.ipynb
agent-learn/src/: embedding.ipynb  faiss.ipynb  first.ipynb  ingestion.ipynb  split.ipynb
agent-learn/src/faiss_index/: index.faiss  index.pkl
agent-learn/src/langchain/: first.ipynb
